# Generated by Django 5.2.12 on 2026-04-03

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Color',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, unique=True)),
                ('is_active', models.BooleanField(default=True)),
            ],
        ),
        migrations.CreateModel(
            name='ContainerDefectType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, unique=True)),
                ('is_active', models.BooleanField(default=True)),
            ],
        ),
        migrations.CreateModel(
            name='DefectType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, unique=True)),
                ('is_active', models.BooleanField(default=True)),
            ],
        ),
        migrations.CreateModel(
            name='ExcelSyncSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('pending', 'Pending confirmation'), ('confirmed', 'Confirmed and applied'), ('rejected', 'Rejected by user')], default='pending', max_length=10)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('qc_fa_plant_data', models.JSONField(default=list)),
                ('qc_fa_customer_data', models.JSONField(default=list)),
                ('seconds_a4_data', models.JSONField(default=list)),
                ('seconds_general_data', models.JSONField(default=list)),
                ('container_data', models.JSONField(default=list)),
                ('qc_fa_plant_preview', models.JSONField(default=dict)),
                ('qc_fa_customer_preview', models.JSONField(default=dict)),
                ('seconds_a4_preview', models.JSONField(default=dict)),
                ('seconds_general_preview', models.JSONField(default=dict)),
                ('container_preview', models.JSONField(default=dict)),
                ('warnings', models.JSONField(default=list)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='QualityQcFa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('table_type', models.CharField(choices=[('QFA', 'QC FA Plant'), ('QFC', 'QC FA Customer')], max_length=3)),
                ('date_1', models.CharField(db_index=True, max_length=20)),
                ('week', models.IntegerField(db_index=True)),
                ('customer', models.CharField(db_index=True, max_length=50)),
                ('team', models.IntegerField(db_index=True)),
                ('coord', models.CharField(max_length=50)),
                ('date_2', models.CharField(blank=True, default='', max_length=20)),
                ('po', models.IntegerField()),
                ('style', models.CharField(db_index=True, max_length=50)),
                ('batch', models.IntegerField()),
                ('qty', models.IntegerField()),
                ('seconds', models.IntegerField()),
                ('accepted', models.IntegerField()),
                ('rejected', models.IntegerField()),
                ('sample', models.IntegerField()),
                ('defects_total', models.IntegerField(default=0)),
                ('aql', models.FloatField()),
                ('pass_or_fail', models.CharField(max_length=10)),
                ('color', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='quality_qc_fa_records', to='quality_data.color')),
            ],
        ),
        migrations.CreateModel(
            name='SecondsA4',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('year', models.IntegerField()),
                ('week', models.IntegerField(db_index=True)),
                ('date', models.CharField(db_index=True, max_length=20)),
                ('cut_num', models.IntegerField()),
                ('style', models.CharField(db_index=True, max_length=50)),
                ('cut_qty', models.IntegerField()),
                ('first_quality_qty_sewing', models.IntegerField()),
                ('sample', models.IntegerField()),
                ('pass_field', models.IntegerField()),
                ('fail_field', models.IntegerField()),
                ('sew_def', models.IntegerField()),
                ('fab_def', models.IntegerField()),
                ('accepted', models.IntegerField()),
                ('rejected', models.IntegerField()),
                ('total_of_2ds', models.IntegerField()),
                ('percentage_of_2ds', models.FloatField()),
                ('line', models.CharField(max_length=20)),
                ('seconds_by_sew', models.IntegerField()),
                ('seconds_by_fab', models.IntegerField()),
                ('seconds_sew_a4', models.IntegerField()),
                ('seconds_fab_a4', models.IntegerField()),
                ('color', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='seconds_a4_records', to='quality_data.color')),
            ],
        ),
        migrations.CreateModel(
            name='SecondsGeneral',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.CharField(db_index=True, max_length=20)),
                ('week', models.IntegerField(db_index=True)),
                ('corrido_2', models.IntegerField()),
                ('barre', models.IntegerField()),
                ('otros_3', models.IntegerField()),
                ('degradacion', models.IntegerField()),
                ('bordados', models.IntegerField()),
                ('total_de_tela', models.IntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='Container',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('container_number', models.IntegerField(unique=True)),
                ('customer', models.CharField(db_index=True, max_length=50)),
                ('transfer_of_container', models.IntegerField(default=0)),
                ('total_palette', models.IntegerField()),
                ('total_palette_pass', models.IntegerField()),
                ('total_palette_rejected', models.IntegerField()),
                ('percentage_pass', models.FloatField()),
                ('percentage_reject', models.FloatField()),
            ],
        ),
        migrations.AddIndex(
            model_name='qualityqcfa',
            index=models.Index(fields=['week', 'team'], name='quality_dat_week_te_e52a_idx'),
        ),
        migrations.CreateModel(
            name='InspectionDefect',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.IntegerField(default=0)),
                ('defect_type', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='inspection_defects', to='quality_data.defecttype')),
                ('inspection', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='inspection_defects', to='quality_data.qualityqcfa')),
            ],
        ),
        migrations.AddConstraint(
            model_name='inspectiondefect',
            constraint=models.UniqueConstraint(fields=('inspection', 'defect_type'), name='unique_quality_qc_fa_defect'),
        ),
        migrations.CreateModel(
            name='ContainerInspectionDefect',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.PositiveIntegerField(default=0)),
                ('container', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='container_defects', to='quality_data.container')),
                ('defect_type', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='container_defects', to='quality_data.containerdefecttype')),
            ],
        ),
        migrations.AddConstraint(
            model_name='containerinspectiondefect',
            constraint=models.UniqueConstraint(fields=('container', 'defect_type'), name='unique_container_defect'),
        ),
        migrations.AddField(
            model_name='container',
            name='defects',
            field=models.ManyToManyField(related_name='container_records', through='quality_data.ContainerInspectionDefect', to='quality_data.ContainerDefectType'),
        ),
        migrations.AddField(
            model_name='qualityqcfa',
            name='defects',
            field=models.ManyToManyField(related_name='quality_qc_fa_records', through='quality_data.InspectionDefect', to='quality_data.DefectType'),
        ),
    ]
